--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,15 @@
     <string name="no_data">暂无数据</string>
 
     <!-- Menu Action -->
-    <string name="action_search">搜索</string>
-    <string name="action_share">分享</string>
+    <string name="action_search">Search</string>
+    <string name="action_share">Share</string>
+    <string name="action_like">Like</string>
+    <string name="action_browser">Browser</string>
 
     <!-- Nav Action -->
     <string name="nav_about">关于</string>
     <string name="nav_setting">设置</string>
+
+    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
 
 </resources>
