--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="home">首页</string>
     <string name="knowledge_system">知识体系</string>
+    <string name="navigation">导航</string>
+    <string name="project">项目</string>
 
     <string name="no_data">暂无数据</string>
 
