--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,17 @@
 <resources>
-    <string name="app_name">玩Android</string>
+    <string name="app_name">WanAndroid</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="home">首页</string>
-    <string name="knowledge_system">知识体系</string>
-    <string name="navigation">导航</string>
-    <string name="project">项目</string>
+    <string name="home">Home</string>
+    <string name="knowledge_system">Knowledge</string>
+    <string name="navigation">Navigation</string>
+    <string name="project">Project</string>
 
-    <string name="no_data">暂无数据</string>
-    <string name="exit_tip">再按一次退出程序</string>
-    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
+    <string name="no_data">No Data</string>
+    <string name="exit_tip">Press again to exit the WanAndroid</string>
+    <string name="share_article_url">%1$sShare【%2$s】：%3$s</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
 
     <!-- Menu Action -->
     <string name="action_search">Search</string>
@@ -18,8 +20,9 @@
     <string name="action_browser">Browser</string>
 
     <!-- Nav Action -->
-    <string name="nav_about">关于</string>
-    <string name="nav_setting">设置</string>
+    <string name="nav_my_collect">Collect</string>
+    <string name="nav_setting">Setting</string>
+    <string name="nav_about_us">About Us</string>
 
     <!-- Login -->
     <string name="username">Username</string>
@@ -37,5 +40,9 @@
     <string name="login_fail">Login Fail</string>
     <string name="register_success">Register Success</string>
     <string name="register_fail">Register Fail</string>
+    <string name="nav_logout">Logout</string>
+    <string name="confirm_logout">Confirm Logout？</string>
+    <string name="logout_success">Logout Success</string>
+    <string name="login_tint">Please Login</string>
 
 </resources>
