--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -44,6 +44,8 @@
     <string name="confirm_logout">确认退出登录？</string>
     <string name="logout_success">退出登录成功</string>
     <string name="login_tint">请先登录</string>
+    <string name="login_ing">登录中...</string>
+    <string name="register_ing">注册中...</string>
 
     <!-- Home -->
     <string name="collect_success">收藏成功</string>
