--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -25,6 +25,7 @@
     <string name="nav_setting">设置</string>
     <string name="nav_about_us">关于我们</string>
     <string name="nav_logout">退出登录</string>
+    <string name="nav_night_mode">夜间模式</string>
 
     <!-- Login -->
     <string name="username">用户名</string>
@@ -91,15 +92,11 @@
     <string name="choose_icon_summary">重启App生效(可以将App从最近任务列表删除来重启)</string>
     <string name="slidable_title">滑动返回</string>
     <string name="slidable_summary">类似 iOS 左侧滑动返回</string>
-    <string name="video_setting">视频设置</string>
-    <string name="video_auto_play">自动播放视频</string>
-    <string name="video_auto_play_summary">开启后在Wifi环境下自动播放视频</string>
     <string name="auto_night_mode">自动切换夜间模式</string>
     <string name="auto_night_mode_summary">设置切换的时间</string>
     <string name="auto_night_mode_subsummary">重启App生效</string>
     <string name="auto_night_category">时间</string>
     <string name="auto_night_start">夜间模式开始时间</string>
     <string name="auto_day_start">日间模式开始时间</string>
-
 
 </resources>
