--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="cancel">Cancel</string>
     <string name="no_data">No Data</string>
     <string name="no_network">Network Anomaly</string>
+    <string name="search_tint">Find more dry goods</string>
 
     <!-- Menu Action -->
     <string name="action_search">Search</string>
