--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,6 @@
     <string name="cancel">Cancel</string>
     <string name="no_data">No Data</string>
     <string name="no_network">Network Anomaly</string>
-    <string name="search_tint">Find more dry goods</string>
 
     <!-- Menu Action -->
     <string name="action_search">Search</string>
@@ -56,6 +55,13 @@
 
     <!-- Collect -->
     <string name="collect">Collect</string>
+
+    <!-- Search -->
+    <string name="search_tint">Find more dry goods</string>
+    <string name="hot_search">Hot Search</string>
+    <string name="clear_all">Clear all</string>
+    <string name="history_search">Search History</string>
+    <string name="search_null_tint">Find some dry goods</string>
 
     <!-- AboutUs -->
     <string name="about_us">About US</string>
