--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,109 +1,109 @@
 <resources>
-    <string name="app_name">WanAndroid</string>
+    <string name="app_name">玩Android</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="home">Home</string>
-    <string name="knowledge_system">Knowledge</string>
-    <string name="navigation">Navigation</string>
-    <string name="project">Project</string>
+    <string name="home">首页</string>
+    <string name="knowledge_system">知识体系</string>
+    <string name="navigation">导航</string>
+    <string name="project">项目</string>
 
-    <string name="exit_tip">Press again to exit the WanAndroid</string>
-    <string name="share_article_url">%1$sShare【%2$s】：%3$s</string>
-    <string name="confirm">Confirm</string>
-    <string name="cancel">Cancel</string>
-    <string name="no_data">No Data</string>
-    <string name="no_network">Network Anomaly</string>
+    <string name="exit_tip">再按一次退出程序</string>
+    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
+    <string name="confirm">确定</string>
+    <string name="cancel">取消</string>
+    <string name="no_data">暂无数据</string>
+    <string name="no_network">网络异常</string>
 
     <!-- Menu Action -->
-    <string name="action_search">Search</string>
-    <string name="action_share">Share</string>
-    <string name="action_like">Like</string>
-    <string name="action_browser">Browser</string>
+    <string name="action_search">搜索</string>
+    <string name="action_share">分享</string>
+    <string name="action_like">收藏</string>
+    <string name="action_browser">用浏览器打开</string>
 
     <!-- Nav Action -->
-    <string name="nav_my_collect">Collect</string>
-    <string name="nav_setting">Setting</string>
-    <string name="nav_about_us">About Us</string>
-    <string name="nav_logout">Logout</string>
-    <string name="nav_night_mode">Night Mode</string>
+    <string name="nav_my_collect">收藏</string>
+    <string name="nav_setting">设置</string>
+    <string name="nav_about_us">关于我们</string>
+    <string name="nav_logout">退出登录</string>
+    <string name="nav_night_mode">夜间模式</string>
 
     <!-- Login -->
-    <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="login">Login</string>
-    <string name="register">Register</string>
-    <string name="no_account">No account yet? Create one</string>
-    <string name="username_not_empty">Username cannot be empty.</string>
-    <string name="password_not_empty">Password cannot be empty.</string>
-    <string name="have_account">Already have a account? Login</string>
-    <string name="enter_password_again">Enter Password Again</string>
-    <string name="confirm_password_not_empty">Confirm Password cannot be empty.</string>
-    <string name="password_cannot_match">Password cannot match</string>
-    <string name="login_success">Login Success</string>
-    <string name="login_fail">Login Fail</string>
-    <string name="register_success">Register Success</string>
-    <string name="register_fail">Register Fail</string>
-    <string name="confirm_logout">Confirm Logout？</string>
-    <string name="logout_success">Logout Success</string>
-    <string name="login_tint">Please Login</string>
-    <string name="login_ing">Login...</string>
-    <string name="register_ing">Register...</string>
+    <string name="username">用户名</string>
+    <string name="password">密码</string>
+    <string name="login">登录</string>
+    <string name="register">注册</string>
+    <string name="no_account">没有账号？去注册</string>
+    <string name="username_not_empty">用户名不能为空</string>
+    <string name="password_not_empty">密码不能为空</string>
+    <string name="have_account">已有账户？去登录</string>
+    <string name="enter_password_again">再输入一次密码</string>
+    <string name="confirm_password_not_empty">确认密码不能为空</string>
+    <string name="password_cannot_match">两词密码不相同</string>
+    <string name="login_success">登录成功</string>
+    <string name="login_fail">登录失败</string>
+    <string name="register_success">注册成功</string>
+    <string name="register_fail">注册失败</string>
+    <string name="confirm_logout">确认退出登录？</string>
+    <string name="logout_success">已退出登录</string>
+    <string name="login_tint">请先登录</string>
+    <string name="login_ing">登录中...</string>
+    <string name="register_ing">注册中...</string>
 
     <!-- Home -->
-    <string name="collect_success">Collect Success</string>
-    <string name="cancel_collect_success">Cancel Collect Success</string>
+    <string name="collect_success">收藏成功</string>
+    <string name="cancel_collect_success">已取消收藏</string>
 
     <!-- Collect -->
-    <string name="collect">Collect</string>
+    <string name="collect">收藏</string>
 
     <!-- Search -->
-    <string name="search_tint">Find more dry goods</string>
-    <string name="hot_search">Hot Search</string>
-    <string name="clear_all">Clear all</string>
-    <string name="history_search">Search History</string>
-    <string name="search_null_tint">Find some dry goods</string>
+    <string name="search_tint">发现更多干货</string>
+    <string name="hot_search">热门搜索</string>
+    <string name="clear_all">清空</string>
+    <string name="history_search">搜索历史</string>
+    <string name="search_null_tint">快来搜点干货吧</string>
 
     <!-- AboutUs -->
-    <string name="about_us">About US</string>
-    <string name="changelog">Update Log</string>
+    <string name="about_us">关于我们</string>
+    <string name="changelog">更新日志</string>
     <string name="changelog_url">https://github.com/iceCola7/WanAndroid/releases</string>
-    <string name="about_developers_label">Main Developer</string>
-    <string name="about_developers">https://github.com/bjchexz</string>
-    <string name="source_code">Source Code</string>
+    <string name="about_developers_label">主要开发者</string>
+    <string name="about_developers">https://github.com/iceCola7</string>
+    <string name="source_code">源代码</string>
     <string name="source_code_url">https://github.com/iceCola7/WanAndroid</string>
-    <string name="about_libraries_label">Open Source License</string>
-    <string name="about_libraries_summary">View open source license information</string>
-    <string name="copyright">Copyright declaration</string>
-    <string name="copyright_summary">Only for personal and non commercial purposes</string>
-    <string name="version">Version</string>
+    <string name="about_libraries_label">开源许可</string>
+    <string name="about_libraries_summary">查看开源许可信息</string>
+    <string name="copyright">版权声明</string>
+    <string name="copyright_summary">仅作个人及非商业用途</string>
+    <string name="version">版本</string>
 
     <!-- Setting -->
-    <string name="setting">Setting</string>
-    <string name="basic_setting">Base Setting</string>
-    <string name="switch_photo_mode">Without Image Mode</string>
-    <string name="switch_no_photo_mode_summary">Unload pictures in non Wifi environment after opening</string>
-    <string name="switch_night_mode">Night Mode</string>
-    <string name="switch_night_mode_summary">Switch Night Mode</string>
-    <string name="clear_cache">Clear Cache</string>
-    <string name="clear_cache_successfully">Clear Success</string>
-    <string name="other_setting">Other Setting</string>
-    <string name="about_settings">About</string>
-    <string name="choose_theme_color">Theme Color</string>
-    <string name="choose_theme_color_summary">Custom theme color</string>
-    <string name="back">Back</string>
-    <string name="done">Done</string>
-    <string name="custom">Custom</string>
-    <string name="nav_bar_coloration">Navigation bar coloring</string>
-    <string name="nav_bar_coloration_summary">Navigation bar color follow subject color</string>
-    <string name="choose_icon">Change Icon</string>
-    <string name="choose_icon_summary">Reboot App to take effect</string>
-    <string name="slidable_title">Sliding Back</string>
-    <string name="slidable_summary">Like iOS left slide back</string>
-    <string name="auto_night_mode">Auto Switch Night Mode</string>
-    <string name="auto_night_mode_summary">Setting the time to switch</string>
-    <string name="auto_night_mode_subsummary">Reboot App to take effect</string>
-    <string name="auto_night_category">Time</string>
-    <string name="auto_night_start">Night Mode Start Time</string>
-    <string name="auto_day_start">Day Mode Start Time</string>
+    <string name="setting">设置</string>
+    <string name="basic_setting">基本设置</string>
+    <string name="switch_photo_mode">无图模式</string>
+    <string name="switch_no_photo_mode_summary">开启后在非Wifi环境下不加载图片</string>
+    <string name="switch_night_mode">夜间模式</string>
+    <string name="switch_night_mode_summary">切换夜间皮肤</string>
+    <string name="clear_cache">清除缓存</string>
+    <string name="clear_cache_successfully">清理成功</string>
+    <string name="other_setting">其他设置</string>
+    <string name="about_settings">关于</string>
+    <string name="choose_theme_color">主题颜色</string>
+    <string name="choose_theme_color_summary">自定义主题颜色</string>
+    <string name="back">返回</string>
+    <string name="done">完成</string>
+    <string name="custom">自定义</string>
+    <string name="nav_bar_coloration">导航栏着色</string>
+    <string name="nav_bar_coloration_summary">导航栏颜色跟随主题颜色</string>
+    <string name="choose_icon">更换图标</string>
+    <string name="choose_icon_summary">重启App生效(可以将App从最近任务列表删除来重启)</string>
+    <string name="slidable_title">滑动返回</string>
+    <string name="slidable_summary">类似 iOS 左侧滑动返回</string>
+    <string name="auto_night_mode">自动切换夜间模式</string>
+    <string name="auto_night_mode_summary">设置切换的时间</string>
+    <string name="auto_night_mode_subsummary">重启App生效</string>
+    <string name="auto_night_category">时间</string>
+    <string name="auto_night_start">夜间模式开始时间</string>
+    <string name="auto_day_start">日间模式开始时间</string>
 
 </resources>
