--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,6 +15,7 @@
     <string name="no_network">Network Anomaly</string>
     <string name="no_network_tip">Please check the network and click reload</string>
     <string name="data_error">Data acquisition failed</string>
+    <string name="network_unavailable_tip">Network connection is not available, please check the network settings!</string>
 
     <!-- Menu Action -->
     <string name="action_search">Search</string>
