--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="no_network">网络异常</string>
     <string name="no_network_tip">请检查网络后点击重新加载</string>
     <string name="data_error">数据获取失败</string>
+    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>
 
     <!-- Menu Action -->
     <string name="action_search">搜索</string>
