--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -110,4 +110,12 @@
     <string name="auto_night_start">Night Mode Start Time</string>
     <string name="auto_day_start">Day Mode Start Time</string>
 
+    <!-- TODO工具 -->
+    <string name="delete_success">Delete Success</string>
+    <string name="delete">Delete</string>
+    <string name="mark_done">Marked as completed</string>
+    <string name="restore">Restore</string>
+    <string name="completed">Completed</string>
+    <string name="confirm_delete">Confirm Delete</string>
+
 </resources>
