--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,5 +129,6 @@
     <string name="save_success">保存成功</string>
     <string name="edit">编辑</string>
     <string name="see">查看</string>
+    <string name="save_ing">正在保存...</string>
 
 </resources>
