mod article new

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -56,6 +56,7 @@
     <!-- Home -->
     <string name="collect_success">Collect Success</string>
     <string name="cancel_collect_success">Cancel Collect Success</string>
+    <string name="new_fresh">New</string>
 
     <!-- Collect -->
     <string name="collect">Collect</string>
