--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <!-- Home -->
     <string name="collect_success">收藏成功</string>
     <string name="cancel_collect_success">已取消收藏</string>
+    <string name="new_fresh">新</string>
 
     <!-- Collect -->
     <string name="collect">收藏</string>
