add top article

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -58,6 +58,7 @@
     <string name="collect_success">Collect Success</string>
     <string name="cancel_collect_success">Cancel Collect Success</string>
     <string name="new_fresh">New</string>
+    <string name="top_tip">Top</string>
 
     <!-- Collect -->
     <string name="collect">Collect</string>
