--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,9 @@
     <string name="auto_night_category">时间</string>
     <string name="auto_night_start">夜间模式开始时间</string>
     <string name="auto_day_start">日间模式开始时间</string>
+    <string name="check_version_fail">检查新版本失败，请稍后重试</string>
+    <string name="check_version_ing">正在检查，请稍候...</string>
+    <string name="check_no_version">当前已是最新版本了</string>
 
     <!-- TODO工具 -->
     <string name="delete_success">删除成功</string>
