--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,6 +6,7 @@
     <string name="knowledge_system">Knowledge</string>
     <string name="navigation">Navigation</string>
     <string name="project">Project</string>
+    <string name="wechat">WeChat</string>
 
     <string name="exit_tip">Press again to exit the WanAndroid</string>
     <string name="share_article_url">%1$sShare【%2$s】：%3$s</string>
