--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="knowledge_system">知识体系</string>
     <string name="navigation">导航</string>
     <string name="project">项目</string>
+    <string name="wechat">公众号</string>
 
     <string name="exit_tip">再按一次退出程序</string>
     <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
