--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -30,7 +30,7 @@
     <string name="nav_about_us">About Us</string>
     <string name="nav_logout">Logout</string>
     <string name="nav_night_mode">Night Mode</string>
-    <string name="nav_todo">TODO Tool</string>
+    <string name="nav_todo">TODO</string>
 
     <!-- Login -->
     <string name="username">Username</string>
@@ -140,5 +140,7 @@
     <string name="see">See</string>
     <string name="save_ing"> Save...</string>
     <string name="switch_label">Switch</string>
+    <string name="priority_0">common</string>
+    <string name="priority_1">important</string>
 
 </resources>
