--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="copyright">版权声明</string>
     <string name="copyright_summary">仅作个人及非商业用途</string>
     <string name="version">版本</string>
+    <string name="current_version">当前版本&#160;</string>
 
     <!-- Setting -->
     <string name="setting">设置</string>
